--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,52 +14,57 @@
         android:text="KidEng"
         android:textColor="#6FA49E"
         android:textSize="70sp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_continue"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
-        android:layout_width="42dp"
-        android:layout_height="37dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:onClick="profileClick"
-        android:src="@drawable/statistics"
-        app:backgroundTint="#B1D7D2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btn_continue"
-        style="@style/MyButton"
-        android:text="@string/btn_continue"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.622"
-        android:onClick="gameClick"/>
-
-    <Button
-        android:id="@+id/btn_theme"
-        style="@style/MyButton"
-        android:text="@string/btn_theme"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_continue"
-        android:onClick="themeClick"/>
-
-    <Button
-        android:id="@+id/btn_restart"
-        style="@style/MyButton"
-        android:text="@string/btn_restart"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_theme"
-        app:layout_constraintVertical_bias="0.143"
-        android:onClick="restartClick"/>
+        android:layout_gravity="center"
+        android:layout_marginBottom="100dp"/>
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp">
+
+        <Button
+            android:layout_marginTop="10dp"
+            android:id="@+id/btn_continue"
+            style="@style/MyButton"
+            android:layout_width="192dp"
+            android:layout_height="65dp"
+            android:onClick="gameClick"
+            android:text="@string/btn_continue" />
+
+        <Button
+            android:id="@+id/btn_theme"
+            style="@style/MyButton"
+            android:layout_width="192dp"
+            android:layout_height="65dp"
+            android:onClick="themeClick"
+            android:text="@string/btn_theme" />
+
+    </LinearLayout>
+
+<!--    <Button-->
+<!--        android:id="@+id/btn_restart"-->
+<!--        style="@style/MyButton"-->
+<!--        android:text="@string/btn_restart"-->
+<!--        android:textStyle="bold"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/btn_theme"-->
+<!--        app:layout_constraintVertical_bias="0.143"-->
+<!--        android:onClick="restartClick"/>-->
+
+    <!--   <ImageButton
+           android:layout_width="42dp"
+           android:layout_height="37dp"
+           android:layout_marginTop="16dp"
+           android:layout_marginEnd="16dp"
+           android:onClick="profileClick"
+           android:src="@drawable/statistics"
+           app:backgroundTint="#B1D7D2"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintTop_toTopOf="parent" />-->
+
+   </FrameLayout>
