--- a/app/src/main/res/layout/game_fragment.xml
+++ b/app/src/main/res/layout/game_fragment.xml
@@ -65,8 +65,9 @@
             android:layout_gravity="right"
             android:textSize="15sp"
             android:layout_margin="5dp"
-            android:layout_width="150dp"
+            android:layout_width="170dp"
             android:layout_height="wrap_content"
+            android:layout_marginRight="15dp"
             android:hint="@string/enter_translate_et"/>
     </androidx.cardview.widget.CardView>
 
@@ -84,7 +85,7 @@
             android:text="@string/check_answer_btn"
             android:layout_marginRight="10dp"
             android:layout_marginTop="50dp"
-            android:layout_width="120dp"
+            android:layout_width="130dp"
             android:layout_height="50dp"
 
          />
@@ -96,7 +97,7 @@
             android:text="@string/skip_answer_btn"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="50dp"
-            android:layout_width="120dp"
+            android:layout_width="130dp"
             android:layout_height="50dp"
 
             />
