--- a/app/src/main/res/layout/game_result_fragment.xml
+++ b/app/src/main/res/layout/game_result_fragment.xml
@@ -20,7 +20,7 @@
             android:text="@string/right_answers_tv"
             android:layout_gravity="top"
             android:layout_marginTop="200dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            />
@@ -29,15 +29,13 @@
             android:id="@+id/right_counter_tv"
             style="@style/MyText"
             android:textSize="25sp"
-            android:text="0"
+            android:text=""
             android:layout_gravity="top"
             android:layout_marginTop="200dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
-
-
     </LinearLayout>
 
     <LinearLayout
@@ -51,7 +49,7 @@
             android:textSize="25sp"
             android:text="@string/wrong_answers_tv"
             android:layout_gravity="top"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="300dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -61,10 +59,10 @@
             android:id="@+id/wrong_counter_tv"
             style="@style/MyText"
             android:textSize="25sp"
-            android:text="0"
+            android:text=""
             android:layout_gravity="top"
             android:layout_marginTop="300dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
@@ -80,7 +78,7 @@
             android:textSize="25sp"
             android:text="@string/total_questions_tv"
             android:layout_gravity="top"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="400dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -89,10 +87,9 @@
             android:id="@+id/total_counter_tv"
             style="@style/MyText"
             android:textSize="25sp"
-            android:text="0"
             android:layout_gravity="top"
             android:layout_marginTop="400dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
@@ -100,15 +97,47 @@
     </LinearLayout>
 
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/home_btn"
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/home"
-        app:maxImageSize="36dp"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="20dp"/>
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="100dp"
+        android:backgroundTint="#FF008577">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                >
 
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/changeMode_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/change"
+                    android:elevation="0dp"
+                    app:elevation="0dp"
+                    app:maxImageSize="48dp"/>
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/again_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/again"
+                    android:elevation="0dp"
+                    app:elevation="0dp"
+                    app:maxImageSize="48dp"/>
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/home_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/home"
+                    android:elevation="0dp"
+                    app:elevation="0dp"
+                app:maxImageSize="48dp" />
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 
 
