--- a/app/src/main/res/layout/game_fragment_start.xml
+++ b/app/src/main/res/layout/game_fragment_start.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#B1D7D2"
-    tools:context=".fragments.GameStartFragment">
+    tools:context=".ui.fragments.GameStartFragment">
 
     <TextView
         style="@style/MyText"
