--- a/app/src/main/res/layout/word_activity.xml
+++ b/app/src/main/res/layout/word_activity.xml
@@ -8,19 +8,34 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_themes"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:id="@+id/recycler_words"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_list" />
+        tools:listitem="@layout/word_item"
+        />
+
+    <TextView
+        android:id="@+id/empty_tv"
+        style="@style/MyText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="50dp"
+        android:textSize="20sp"
+        android:textColor="#FF008577"
+        android:text="@string/empty_word_list"
+        app:layout_anchor="@id/recycler_words"
+        app:layout_anchorGravity="center"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:onClick="addTheme"
+        android:onClick="addWord"
         android:backgroundTint="#FF008577"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/add"
         android:layout_gravity="bottom|right"
-        android:layout_margin="16dp"
-        android:contentDescription="+" />
+        android:layout_margin="16dp"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
