--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,52 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#B1D7D2"
-    tools:context=".ui.activities.MainActivity">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <TextView
-        android:id="@+id/user_tv"
+    <include
+        android:id="@+id/app_bar_main"
+        layout="@layout/app_bar_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
         style="@style/MyText"
+
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="User"
-        android:textSize="20sp"
-        android:layout_gravity="right"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="20dp"
-        />
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/primary"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/activity_main_drawer" />
 
-    <ImageView
-        android:layout_width="260dp"
-        android:layout_height="305dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="100dp"
-        android:src="@drawable/logo" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center"
-        android:layout_marginTop="50dp">
-
-        <Button
-            android:layout_marginTop="10dp"
-            android:id="@+id/btn_continue"
-            style="@style/MyButton"
-            android:layout_width="192dp"
-            android:layout_height="65dp"
-            android:onClick="gameClick"
-            android:text="@string/btn_continue" />
-
-        <Button
-            android:id="@+id/btn_theme"
-            style="@style/MyButton"
-            android:layout_width="192dp"
-            android:layout_height="65dp"
-            android:onClick="themeClick"
-            android:text="@string/btn_theme" />
-    </LinearLayout>
-   </FrameLayout>
+   </androidx.drawerlayout.widget.DrawerLayout>
