--- a/app/src/main/res/layout/fragment_support.xml
+++ b/app/src/main/res/layout/fragment_support.xml
@@ -3,11 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/primary"
     tools:context=".ui.fragments.navigation.SupportFragment">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="@string/support"
         android:layout_gravity="center"
         android:textSize="20sp"/>
