--- a/app/src/main/res/layout/theme_activity.xml
+++ b/app/src/main/res/layout/theme_activity.xml
@@ -7,10 +7,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/teal_700"
+        app:navigationIcon="?attr/homeAsUpIndicator"
+        app:title="@string/themes"
+        style="@style/MyText"
+        app:titleTextColor="@color/secondary">
+
+    </androidx.appcompat.widget.Toolbar>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_themes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/theme_item" />
 
