--- a/app/src/main/res/layout/theme_item.xml
+++ b/app/src/main/res/layout/theme_item.xml
@@ -29,6 +29,7 @@
             android:maxLines="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textStyle="bold"
+            android:textColor="@color/black"
             tools:text="@string/theme_name" />
 
         <TextView
