--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,35 +3,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <item
-        android:id="@+id/nav_main"
-        android:icon="@drawable/ic_home"
-        android:title="@string/main"/>
-    <item
-        android:id="@+id/nav_profile"
-        android:icon="@drawable/ic_profile"
-        android:title="@string/profile"/>
+    <group
+        android:id="@+id/menu_top"
+        android:checkableBehavior="single">
 
-    <item
-        android:id="@+id/nav_statistics"
-        android:icon="@drawable/ic_statistics"
-        android:title="@string/user_statistics"/>
+        <item
+            android:id="@+id/nav_main"
+            android:icon="@drawable/ic_home"
+            android:title="@string/main"/>
 
-    <item
-        android:id="@+id/nav_settings"
-        android:icon="@drawable/ic_settings"
-        android:title="@string/settings"/>
+        <item
+            android:id="@+id/nav_statistics"
+            android:icon="@drawable/ic_statistics"
+            android:title="@string/user_statistics"/>
+
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/ic_settings"
+            android:title="@string/settings"/>
+
+    </group>
 
     <item android:title="@string/others">
         <menu>
-            <item android:id="@+id/help"
+            <item android:id="@+id/nav_support"
                 android:icon="@drawable/ic_help"
                 android:title="@string/support"/>
 
-            <item android:id="@+id/about_us"
+            <item android:id="@+id/nav_about_us"
                 android:icon="@drawable/ic_about_us"
                 android:title="@string/about_us"/>
-
         </menu>
     </item>
+
 </menu>
