--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/nav_main"
-        android:icon="@drawable/ic_home"
-        android:title="@string/main"/>
-    <item
-        android:id="@+id/nav_profile"
-        android:icon="@drawable/ic_profile"
-        android:title="@string/profile"/>
 
-    <item
-        android:id="@+id/nav_statistics"
-        android:icon="@drawable/ic_statistics"
-        android:title="@string/user_statistics"/>
+    <group
+        android:id="@+id/menu_top"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_main"
+            android:icon="@drawable/ic_home"
+            android:title="@string/main"/>
 
-    <item
-        android:id="@+id/nav_settings"
-        android:icon="@drawable/ic_settings"
-        android:title="@string/settings"/>
+        <item
+            android:id="@+id/nav_statistics"
+            android:icon="@drawable/ic_statistics"
+            android:title="@string/user_statistics"/>
 
-    <item android:title="@string/others">
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/ic_settings"
+            android:title="@string/settings"/>
+    </group>
+
+    <item android:title="Другое">
         <menu>
             <item android:id="@+id/nav_support"
                 android:icon="@drawable/ic_help"
@@ -28,7 +29,6 @@
             <item android:id="@+id/nav_about_us"
                 android:icon="@drawable/ic_about_us"
                 android:title="@string/about_us"/>
-
         </menu>
     </item>
 </menu>
