--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MyProject" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MyProject" parent="Theme.MaterialComponents.NoActionBar">
 
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/teal_700</item>
