--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,15 +4,16 @@
 
         <item name="android:forceDarkAllowed" tools:targetApi="q">true</item>
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/primary</item>>
+        <item name="colorPrimary">@color/teal_700</item>>
         <item name="android:textColor">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/secondary</item>
-        <item name="colorOnSecondary">@color/secondary</item>
+        <item name="colorSecondary">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/teal_700</item>
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >@color/teal_800</item>
         <!-- Customize your theme here. -->
+        <item name="android:colorBackground">@color/primary</item>
 
     </style>
 
