--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,14 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MyProject" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.MyProject" parent="Theme.MaterialComponents.NoActionBar">
 
-        <item name="android:forceDarkAllowed" tools:targetApi="q">true</item>
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/teal_700</item>>
         <item name="android:textColor">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/secondary</item>
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >@color/teal_800</item>
@@ -21,9 +20,9 @@
     <style name="ThemeOverlay.MaterialComponents.MaterialAlertDialog_Background" parent="@style/ThemeOverlay.MaterialComponents.MaterialAlertDialog">
         <!-- Background Color-->
         <item name="android:background">@color/teal_200</item>
-        <!-- Text Color for title and message -->
-        <item name="colorOnSurface">@color/teal_700</item>
-        <item name="colorControlNormal">@color/teal_700</item>
+<!--        &lt;!&ndash; Text Color for title and message &ndash;&gt;-->
+<!--        <item name="colorOnSurface">@color/teal_700</item>-->
+<!--        <item name="colorControlNormal">@color/teal_700</item>-->
         <item name="android:textColorAlertDialogListItem">@color/teal_700</item>
 
     </style>
