--- a/app/src/main/res/layout/fragment_support.xml
+++ b/app/src/main/res/layout/fragment_support.xml
@@ -6,11 +6,24 @@
     tools:context=".ui.fragments.navigation.SupportFragment">
 
     <TextView
+        style="@style/MyText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/support"
-        android:layout_gravity="center"
-        android:textSize="20sp"/>
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="50dp"
+        android:layout_gravity="center_vertical"
+        android:textSize="20sp"
+        android:text="@string/help_text" />
 
+    <Button
+        android:id="@+id/form_bt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="90dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginStart="40dp"
+        style="@style/MyButton"
+        android:text="@string/fill_form"/>
 </FrameLayout>
